# django-tortoise-adapter

./: .gitignore  GEMINI.md  LICENSE  README.md  manage.py  pyproject.toml
.github/workflows/: check_format.yml  publish_on_pypi.yml  test_e2e.yml  test_unit.yml
django_tortoise_adapter/: __init__.py  asgi.py  bridge.py  core.py  models.py  translator.py
django_tortoise_adapter/tests/e2e/: Dockerfile  docker-compose.e2e.yml  manage.py  pyproject.toml  test_e2e.py  test_runner.Dockerfile
django_tortoise_adapter/tests/e2e/polls/: models.py  views.py
django_tortoise_adapter/tests/e2e/polls/migrations/: 0001_initial.py
django_tortoise_adapter/tests/e2e/polls_project/: asgi.py  settings.py  urls.py  wsgi.py
django_tortoise_adapter/tests/unit/: __init__.py  test_core.py  test_translator.py
